--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+Packages/packages-lock.json
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
